fix scrollbar cutoff on top pools

--- a/src/components/Global/Explore/TopPools/TopPools.module.css
+++ b/src/components/Global/Explore/TopPools/TopPools.module.css
@@ -76,7 +76,7 @@
     width: 2px;
     position: absolute;
     background-color: var(--dark3);
-    right: 10px;
+    right: 18px;
 }
 
 .tokens {
